<resources>
    <string name="app_name">AccountabilityChat</string>

    // Log-In Activity
    <string name="app_title">Accountability Chat</string>
    <string name="log_in_button">Log In</string>
    <string name="register_button">Register</string>
    <string name="created_by">Created by Kensal Ramos</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>

    // Welcome Activity
    <string name="what_is_question">What is AccountabilityChat?</string>
    <string name="description_AC">AccountabilityChat is a chatting application that promotes holding
        your friends accountable and determined into achieving their goals.</string>
    <string name="instructions">Instructions</string>
    <string name="instructions_desc">To chat with another user, you will need their username. Given
    their username, the app will let you chat with that user and motivate them.</string>

    // Register Activity
    <string name="register_title">Registration</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="your_account_title">Your Account</string>
    <string name="add_user">Add User</string>

    // Main Activity


    // Add User Activity
    <string name="add_user_title">Add User</string>
    <string name="add_username_desc">Who do you want to chat with?</string>
    <string name="send_welcome_msg">Send the first message</string>
    <string name="send_welcome_msg_hint">Message</string>

    // Your Account Activity
    <string name="first_name_title">First Name: %1$s</string>
    <string name="last_name_title">Last Name: %1$s</string>
    <string name="username_title">Username: %1$s</string>
    <string name="password_title">Password: %1$s</string>
    <string name="edit_btn_title">Edit</string>
    <string name="return_btn_title">Update Information</string>
    <string name="update_btn_title">Update</string>

    // Chat Activity
    <string name="chatting_with_string">Chatting with kj11</string> // Replace kj11 with %1$s
    <string name="sender_username">mbarnett</string> // Actual string: %1$s
    <string name="receiver_username">kj11</string>
    <string name="message_prompt">Send a message</string>
    <string name="send_message_btn">Send message</string>
    <string name="home_btn">Home</string>


</resources>