<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <View
        android:id="@+id/mainTopBanner3"
        android:layout_width="413dp"
        android:layout_height="60dp"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/yourAccountTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/open_sans_light"
        android:text="@string/your_account_title"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/mainTopBanner3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/mainTopBanner3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/usernameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/username_title"
        android:textAllCaps="true"
        android:textColor="#040404"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTopBanner3" />

    <TextView
        android:id="@+id/firstNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/first_name_title"
        android:textAllCaps="true"
        android:textColor="#040404"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameTitle" />

    <Button
        android:id="@+id/firstNameEditBtn"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorAccent"
        android:fontFamily="@font/open_sans_light"
        android:onClick="fNameEditOnClick"
        android:text="@string/edit_btn_title"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameTitle" />

    <EditText
        android:id="@+id/editFNameInput"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:fontFamily="@font/open_sans_light"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameTitle" />

    <TextView
        android:id="@+id/lastNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/last_name_title"
        android:textAllCaps="true"
        android:textColor="#040404"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameTitle" />

    <Button
        android:id="@+id/lastNameEditBtn"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorAccent"
        android:fontFamily="@font/open_sans_light"
        android:onClick="lNameEditOnClick"
        android:text="@string/edit_btn_title"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameTitle" />

    <EditText
        android:id="@+id/editLNameInput"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:visibility="gone"
        android:layout_marginLeft="5dp"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:fontFamily="@font/open_sans_light"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameTitle" />

    <TextView
        android:id="@+id/passwordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/password_title"
        android:textAllCaps="true"
        android:textColor="#040404"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameTitle" />

    <Button
        android:id="@+id/passwordEditBtn"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorAccent"
        android:fontFamily="@font/open_sans_light"
        android:onClick="passwordEditOnClick"
        android:text="@string/edit_btn_title"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTitle" />

    <EditText
        android:id="@+id/editPasswordInput"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:visibility="gone"
        android:layout_marginLeft="5dp"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:fontFamily="@font/open_sans_light"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTitle" />

    <Button
        android:id="@+id/updateBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@color/colorAccent"
        android:fontFamily="@font/open_sans_light"
        android:onClick="updateBtnOnClick"
        android:text="@string/return_btn_title"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>